# ask_galadirel

./: .gitignore  README.md  client.py  config.py  main.py  pyproject.toml  ui.py
src/: generate.py  index.py  loggers.py  retrieval.py
